--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
  
    
   "css-loader": "^6.7.1",
-   "eslint": "^8.26.0",  
+ 
+   
+  "eslint": "^8.26.0",
+ 
+   
   "eslint-config-prettier": "^8.5.0",
  
    
@@ -63,6 +67,9 @@
  
    
   "eslint-plugin-react": "^7.31.10",
+ 
+   
+  "file-loader": "^6.2.0",
  
    
   "html-webpack-plugin": "^5.5.0",
@@ -90,7 +97,10 @@
   "react": "^18.2.0",
  
    
-  "react-dom": "^18.2.0"
+  "react-dom": "^18.2.0",
+ 
+   
+  "react-icons": "^4.6.0"
  
   }
 }
