--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
  
   "scripts": {
  
-   "format":"prettier ./src/** --write",
+   
+  "format": "prettier ./src/** --write",
+ 
+   
   "dev": "webpack-dev-server",
  
    
@@ -40,6 +43,9 @@
  
    
   "@babel/preset-react": "^7.18.6",
+ 
+   
+  "@svgr/webpack": "^6.5.1",
  
    
   "babel-loader": "^8.2.5",
