--- a/package.json
+++ b/package.json
@@ -118,7 +118,10 @@
   "react-router": "^6.4.2",
  
    
-  "react-router-dom": "^6.4.2"
+  "react-router-dom": "^6.4.2",
+ 
+   
+  "react-spinners": "^0.13.6"
  
   }
 }
